refactoring(BE): a bunch of backend refactoring